# whir-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  program-keypair.json
.cargo/: config.toml
.devcontainer/: post_create_command.sh
config/: Cargo.toml
config/src/: lib.rs
native-prover/: Cargo.toml
native-prover/src/: lib.rs  main.rs
programs/whir-verifier-solana/: Cargo.toml
programs/whir-verifier-solana/src/: lib.rs
sample-proof/: metadata.json
scripts/: test.sh
tests/: whir-verifier.ts
